minor: clean up test assertions